tests/baselines/reference/checkGrammarStaticMemberName_es5.errors.txt
tests/cases/compiler/checkGrammarStaticMemberName_es5.ts(3,5): error TS2696: 'length' is not allowed to be used as a name of a static property or method in a class for target ES5.
tests/cases/compiler/checkGrammarStaticMemberName_es5.ts(4,5): error TS2696: 'name' is not allowed to be used as a name of a static property or method in a class for target ES5.
tests/cases/compiler/checkGrammarStaticMemberName_es5.ts(5,5): error TS2696: 'arguments' is not allowed to be used as a name of a static property or method in a class for target ES5.
tests/cases/compiler/checkGrammarStaticMemberName_es5.ts(6,5): error TS2696: 'caller' is not allowed to be used as a name of a static property or method in a class for target ES5.
tests/cases/compiler/checkGrammarStaticMemberName_es5.ts(8,9): error TS2696: 'length' is not allowed to be used as a name of a static property or method in a class for target ES5.
tests/cases/compiler/checkGrammarStaticMemberName_es5.ts(9,9): error TS2696: 'name' is not allowed to be used as a name of a static property or method in a class for target ES5.
tests/cases/compiler/checkGrammarStaticMemberName_es5.ts(10,9): error TS2696: 'arguments' is not allowed to be used as a name of a static property or method in a class for target ES5.
tests/cases/compiler/checkGrammarStaticMemberName_es5.ts(11,9): error TS2696: 'caller' is not allowed to be used as a name of a static property or method in a class for target ES5.
tests/cases/compiler/checkGrammarStaticMemberName_es5.ts(16,12): error TS2696: 'length' is not allowed to be used as a name of a static property or method in a class for target ES5.
tests/cases/compiler/checkGrammarStaticMemberName_es5.ts(17,12): error TS2696: 'name' is not allowed to be used as a name of a static property or method in a class for target ES5.
tests/cases/compiler/checkGrammarStaticMemberName_es5.ts(18,12): error TS2696: 'arguments' is not allowed to be used as a name of a static property or method in a class for target ES5.
tests/cases/compiler/checkGrammarStaticMemberName_es5.ts(19,12): error TS2696: 'caller' is not allowed to be used as a name of a static property or method in a class for target ES5.


==== tests/cases/compiler/checkGrammarStaticMemberName_es5.ts (12 errors) ====
    
    class static_property {
        static length = 1;
        ~~~~~~~~~~~~~~~~~~
!!! error TS2696: 'length' is not allowed to be used as a name of a static property or method in a class for target ES5.
        static name = 1;
        ~~~~~~~~~~~~~~~~
!!! error TS2696: 'name' is not allowed to be used as a name of a static property or method in a class for target ES5.
        static arguments = 1;
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2696: 'arguments' is not allowed to be used as a name of a static property or method in a class for target ES5.
        static caller = 1;
        ~~~~~~~~~~~~~~~~~~
!!! error TS2696: 'caller' is not allowed to be used as a name of a static property or method in a class for target ES5.
        static foo = {
            ["length"]: 1,
            ~~~~~~~~~~
!!! error TS2696: 'length' is not allowed to be used as a name of a static property or method in a class for target ES5.
            ["name"]: 1,
            ~~~~~~~~
!!! error TS2696: 'name' is not allowed to be used as a name of a static property or method in a class for target ES5.
            ["arguments"]: 1,
            ~~~~~~~~~~~~~
!!! error TS2696: 'arguments' is not allowed to be used as a name of a static property or method in a class for target ES5.
            ["caller"]: 1,
            ~~~~~~~~~~
!!! error TS2696: 'caller' is not allowed to be used as a name of a static property or method in a class for target ES5.
        };
    }
    
    class static_method {
        static length() { return 1; }
               ~~~~~~
!!! error TS2696: 'length' is not allowed to be used as a name of a static property or method in a class for target ES5.
        static name() { return 1; }
               ~~~~
!!! error TS2696: 'name' is not allowed to be used as a name of a static property or method in a class for target ES5.
        static arguments() { return 1; }
               ~~~~~~~~~
!!! error TS2696: 'arguments' is not allowed to be used as a name of a static property or method in a class for target ES5.
        static caller() { return 1; }
               ~~~~~~
!!! error TS2696: 'caller' is not allowed to be used as a name of a static property or method in a class for target ES5.
    }
    